--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@ development:
   adapter: postgresql
   encoding: unicode
   database: scabbard_development
+  host: localhost
   pool: 5
   username: postgres
   password:
@@ -18,6 +19,7 @@ test:
   adapter: postgresql
   encoding: unicode
   database: scabbard_test
+  host: localhost
   pool: 5
   username: postgres
   password:
