--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,13 +1,16 @@
 michael:
   name: Michael Bluth
   email: michael@thebluth.co
+  password_digest: <%= default_password_digest %>
   passages: isaiah_40_8, micah_6_8
 
 buster:
   name: Buster Bluth
   email: buster@thebluth.co
+  password_digest: <%= default_password_digest %>
   passages: isaiah_40_8
 
 george:
   name: George Bluth
   email: george@thebluth.co
+  password_digest: <%= default_password_digest %>
