feat(guest) Guests can save passages without creating an account.

--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -14,3 +14,6 @@ george:
   name: George Bluth
   email: george@thebluth.co
   password_digest: <%= default_password_digest %>
+
+guest:
+  name: GUEST
