--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,22 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf8
   database: scabbard_development
   host: localhost
   pool: 5
-  username: postgres
+  username: root
   password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf8
   database: scabbard_test
   host: localhost
   pool: 5
-  username: postgres
+  username: root
   password:
